--- a/AppTFG/AppTFG.Android/AppTFG.Android.csproj
+++ b/AppTFG/AppTFG.Android/AppTFG.Android.csproj
@@ -53,6 +53,7 @@
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Numerics" />
@@ -70,9 +71,6 @@
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
-    </PackageReference>
-    <PackageReference Include="SQLite.Net-PCL">
-      <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="SQLiteNetExtensions">
       <Version>2.1.0</Version>
@@ -131,10 +129,16 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1905" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1931" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Forms.Maps">
-      <Version>5.0.0.1905</Version>
+      <Version>5.0.0.1931</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms.PancakeView">
+      <Version>1.1.5</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Plugin.SharedTransitions">
+      <Version>2.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -144,13 +148,40 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoundedCornerViewRenderer.cs" />
     <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\.editorconfig">
       <Link>.editorconfig</Link>
     </None>
+    <AndroidAsset Include="Resources\Fonts\PS\PublicSans-VariableFont_wght.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\PublicSans-Italic-VariableFont_wght.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Black.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-BlackItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Bold.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-BoldItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-ExtraBold.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-ExtraBoldItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-ExtraLight.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-ExtraLightItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Italic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Light.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-LightItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Medium.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-MediumItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Regular.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-SemiBold.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-SemiBoldItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-Thin.ttf" />
+    <AndroidAsset Include="Resources\Fonts\PS\static\PublicSans-ThinItalic.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Medium.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Regular.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-SemiBold.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Thin.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Black.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Bold.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-ExtraBold.ttf" />
+    <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Light.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -224,6 +255,26 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Raw\BD_SistemaRural.db">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pita.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\google.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\facebook.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\twitter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\back.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
