Bindeo de la lista de vídeo a la pantalla de subir/reproducir vídeo. Comprobando el FlyoutHeader.

--- a/AppTFG/AppTFG.Android/Properties/AndroidManifest.xml
+++ b/AppTFG/AppTFG.Android/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<application 
 		android:label="AppTFG.Android" 
 		android:theme="@style/MyTheme.NoActionBar"
-		android:icon="@mipmap/icon" 
+		android:icon="@mipmap/logo_transparent" 
 		android:allowBackup="true"
 		largeHeap="true" 
 		android:hardwareAccelerated="false">
