--- a/AppTFG/AppTFG.Android/Properties/AndroidManifest.xml
+++ b/AppTFG/AppTFG.Android/Properties/AndroidManifest.xml
@@ -1,13 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appTFG" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appTFG" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="20" android:targetSdkVersion="29" />
-	<application 
-		android:label="AppTFG.Android" 
-		android:theme="@style/MyTheme.NoActionBar"
-		android:icon="@mipmap/logo_transparent" 
-		android:allowBackup="true"
-		largeHeap="true" 
-		android:hardwareAccelerated="false">
+	<application android:label="AppTFG.Android" android:theme="@style/MyTheme.NoActionBar" android:icon="@mipmap/logo_transparent" android:allowBackup="true" largeHeap="true" android:hardwareAccelerated="false">
 		<!--
 		Para el fallo de memoria:
 			- largeHeap="true" 
