--- a/AppTFG/AppTFG.Android/AppTFG.Android.csproj
+++ b/AppTFG/AppTFG.Android/AppTFG.Android.csproj
@@ -60,6 +60,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="FirebaseDatabase.net">
       <Version>4.0.6</Version>
     </PackageReference>
@@ -150,7 +153,7 @@
       <Version>5.0.0.1931</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms.PancakeView">
-      <Version>1.1.5</Version>
+      <Version>1.4.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Plugin.SharedTransitions">
       <Version>2.4.0</Version>
