--- a/AppTFG/AppTFG.Android/AppTFG.Android.csproj
+++ b/AppTFG/AppTFG.Android/AppTFG.Android.csproj
@@ -203,6 +203,7 @@
     <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-ExtraBold.ttf" />
     <AndroidAsset Include="Resources\Fonts\BSD\BigShouldersDisplay-Light.ttf" />
     <GoogleServicesJson Include="google-services.json" />
+    <None Include="google-services %281%29.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
