--- a/AppTFG/AppTFG.iOS/AppTFG.iOS.csproj
+++ b/AppTFG/AppTFG.iOS/AppTFG.iOS.csproj
@@ -147,6 +147,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core">
       <Version>5.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Octane.Xam.VideoPlayer">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Polly">
       <Version>7.2.1</Version>
     </PackageReference>
