Solo falta Grabar/Almacenar/Reproducir un Audio.

--- a/AppTFG/AppTFG/AppTFG.csproj
+++ b/AppTFG/AppTFG/AppTFG.csproj
@@ -107,6 +107,9 @@
     <Compile Update="Paginas\ListaFotosPueblo.xaml.cs">
       <DependentUpon>ListaFotosPueblo.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Paginas\PantallaCompleta.xaml.cs">
+      <DependentUpon>PantallaCompleta.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Temas\TemaClaro.xaml.cs">
       <DependentUpon>TemaClaro.xaml</DependentUpon>
     </Compile>
@@ -155,7 +158,7 @@
     <EmbeddedResource Update="Paginas\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Paginas\Page1.xaml">
+    <EmbeddedResource Update="Paginas\PantallaCompleta.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Paginas\PaginaActividad.xaml">
