--- a/AppTFG/AppTFG.Android/AppTFG.Android.csproj
+++ b/AppTFG/AppTFG.Android/AppTFG.Android.csproj
@@ -81,6 +81,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core">
       <Version>5.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.AudioRecorder">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.CurrentActivity">
       <Version>2.1.0.4</Version>
     </PackageReference>
@@ -95,9 +98,6 @@
     </PackageReference>
     <PackageReference Include="System.ComponentModel.Annotations">
       <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xam.Plugin.ExternalMaps">
-      <Version>4.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>5.0.1</Version>
@@ -149,6 +149,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps">
+      <Version>3.3.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>5.0.0.2012</Version>
     </PackageReference>
