--- a/AppTFG/AppTFG.iOS/AppTFG.iOS.csproj
+++ b/AppTFG/AppTFG.iOS/AppTFG.iOS.csproj
@@ -144,6 +144,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core">
       <Version>5.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.AudioRecorder">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
@@ -156,9 +159,6 @@
     <PackageReference Include="System.ComponentModel.Annotations">
       <Version>5.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Xam.Plugin.ExternalMaps">
-      <Version>4.0.1</Version>
-    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>5.0.1</Version>
     </PackageReference>
@@ -167,6 +167,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps">
+      <Version>3.3.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>5.0.0.2012</Version>
     </PackageReference>
