--- a/AppTFG/AppTFG.Android/AppTFG.Android.csproj
+++ b/AppTFG/AppTFG.Android/AppTFG.Android.csproj
@@ -63,11 +63,17 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.481</Version>
     </PackageReference>
+    <PackageReference Include="FirebaseAuthentication.net">
+      <Version>3.7.1</Version>
+    </PackageReference>
     <PackageReference Include="FirebaseDatabase.net">
       <Version>4.0.6</Version>
     </PackageReference>
     <PackageReference Include="FirebaseStorage.net">
       <Version>1.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization">
+      <Version>5.0.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Data.Sqlite">
       <Version>6.0.0-preview.1.21102.2</Version>
